--- a/CondominioApp/app/src/main/res/values/strings.xml
+++ b/CondominioApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">CondominioApp</string>
+    <string name="facebook_app_id">1290726257677962</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="chamados">Chamados</string>
+    <string name="meus_chamados">Meus Chamados</string>
 </resources>
