--- a/CondominioApp/app/src/main/res/values/strings.xml
+++ b/CondominioApp/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="chamados">Chamados</string>
     <string name="meus_chamados">Meus Chamados</string>
+    <string name="comentarios">COMENTÁRIOS</string>
+    <string name="detalhes">Detalhes</string>
 </resources>
