--- a/CondominioApp/app/src/main/res/values/strings.xml
+++ b/CondominioApp/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="meus_chamados">Meus Chamados</string>
     <string name="comentarios">COMENTÁRIOS</string>
     <string name="detalhes">Detalhes</string>
+    <string name="novo_chamado">Novo Chamado</string>
 </resources>
